test/src/e2e_vm_tests/test_programs/should_pass/unit_tests/should_revert/src/lib.sw
library;

#[test(should_revert)]
fn should_revert_test() {
  assert(0 == 1)
}
